k8s/grouper-ui.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: grouper-ui
  namespace: grouper
  labels:
    app: grouper-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grouper-ui
  template:
    metadata:
      labels:
        app: grouper-ui
        role: ui
    spec:
      containers:
        - name: grouper-ui
          command:
            - /usr/local/bin/entrypoint.sh
          args:
            - ui
          ports:
            - containerPort: 443
              protocol: TCP
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
          image: bgregorius/grouper-ui
