k8s/grouper-ui-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: grouper-ui-svc
  namespace: grouper
  labels:
    app: grouper-ui
spec:
  ports:
    - name: 443-tcp
      protocol: TCP
      port: 443
      targetPort: 443
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 80
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: grouper-ui
    role: ui
  type: ClusterIP
